integration tests for table classification and removing sample.html and testing with actual github page